Adicionando envio de telemetria

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ MAQUINA_ID="id unico"
 
 CONTROLLER_RUNNER_PATH="tests/controller_mock.sh"
 
-CENTRAL_API_TOKEN="bearer token"
 
 CAM_ID="0"
+
+TELEMETRY_DELAY_SECONDS="5"
+TELEMETRY_SERVER_HOST="http://localhost:8000"
+TELEMETRY_API_TOKEN="telemetry api token"
