--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,8 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 battery-analyser = { path = "./battery-analyser" }
-opencv-python = "~4.5.3.56"
 httpx = "^0.24.1"
+picamera = "^1.13"
 
 [build-system]
 requires = ["poetry-core"]
