--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python = ">=3.8,<3.12"
 battery-analyser = { path = "./battery-analyser" }
 httpx = "^0.24.1"
 picamera = "^1.13"
+numpy = ">=1.20.0"
 
 [build-system]
 requires = ["poetry-core"]
