--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ battery-analyser = { path = "./battery-analyser" }
 # picamera = "^1.13"
 numpy = ">=1.20.0"
 requests = "^2.31.0"
+qrcode = "^7.4.2"
 
 [build-system]
 requires = ["poetry-core"]
