--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,12 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 battery-analyser = { path = "./battery-analyser" }
-# picamera = "^1.13"
-numpy = ">=1.20.0"
-requests = "^2.31.0"
-qrcode = "^7.4.2"
+picamera = "1.13"
+numpy = "1.24.3"
+requests = "2.31.0"
+qrcode = "7.4.2"
+pillow = "^10.0.0"
+tk = "^0.1.0"
 
 [build-system]
 requires = ["poetry-core"]
