--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 battery-analyser = { path = "./battery-analyser" }
+pyserial = "3.5"
 picamera = "1.13"
 numpy = "1.24.3"
 requests = "2.31.0"
