--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ requests = "2.31.0"
 qrcode = "7.4.2"
 pillow = "^10.0.0"
 tk = "^0.1.0"
+pyserial = "^3.5"
+rpi-gpio = "0.7.1"
 
 [build-system]
 requires = ["poetry-core"]
